practice/bmuschko-ckad-crash-course/17/app-stack-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-netpol
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: todo
      tier: database
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: todo
          tier: backend
    ports:
    - port: 3306
      protocol: TCP
